Implements helper of errors and update struct of user and error. Update route PUT (remove path ID).
