# docs/swagger.yaml
@@ -1,23 +1,25 @@
 definitions:
   github_com_luizweitz_go-api_internal_models.Error:
     properties:
-      error:
+      code:
+        type: integer
+      message:
+        type: string
+      status:
         type: string
     type: object
   github_com_luizweitz_go-api_internal_models.User:
     properties:
-      ID:
-        type: string
       age:
         type: integer
       city:
-        description: When passed * means that this field can be null
+        description: can be null
         type: string
       createdAt:
         type: string
-      deletedAt:
-        $ref: '#/definitions/gorm.DeletedAt'
       email:
+        type: string
+      id:
         type: string
       name:
         type: string
@@ -27,14 +29,6 @@ definitions:
     - age
     - email
     - name
-    type: object
-  gorm.DeletedAt:
-    properties:
-      time:
-        type: string
-      valid:
-        description: Valid is true if Time is not NULL
-        type: boolean
     type: object
 info:
   contact:
@@ -48,7 +42,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Search All Users Active
+      description: Search All Users
       produces:
       - application/json
       responses:
@@ -59,14 +53,14 @@ paths:
               $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.User'
             type: array
         "400":
-          description: error
+          description: Error
           schema:
             $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.Error'
         "500":
-          description: internal server error
+          description: Internal Server Error
           schema:
             $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.Error'
-      summary: Search All Users Active
+      summary: Search All Users
       tags:
       - users
     post:
@@ -88,14 +82,51 @@ paths:
           schema:
             $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.User'
         "400":
-          description: error
+          description: Error
+          schema:
+            $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.Error'
+        "409":
+          description: 'Error Conflict '
           schema:
             $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.Error'
         "500":
-          description: internal server error
+          description: Internal Server Error
           schema:
             $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.Error'
       summary: Create User
+      tags:
+      - users
+    put:
+      consumes:
+      - application/json
+      description: Update Data User By ID With The Given Input Data
+      parameters:
+      - description: Update user object
+        in: body
+        name: Input
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: string
+        "400":
+          description: Error
+          schema:
+            $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.Error'
+        "404":
+          description: Record Not Found
+          schema:
+            $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.Error'
+      summary: Update User By ID
       tags:
       - users
   /users/{id}:
@@ -113,19 +144,19 @@ paths:
       - application/json
       responses:
         "200":
-          description: success
+          description: Success
           schema:
             type: string
         "400":
-          description: error
+          description: Error
           schema:
             $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.Error'
         "404":
-          description: record not found
+          description: Record Not Found
           schema:
             $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.Error'
         "500":
-          description: internal server error
+          description: Internal Server Error
           schema:
             $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.Error'
       summary: Delete User By ID
@@ -149,56 +180,18 @@ paths:
           schema:
             $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.User'
         "400":
-          description: error
+          description: Error
           schema:
             $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.Error'
         "404":
-          description: record not found
+          description: Eecord Not Found
           schema:
             $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.Error'
         "500":
-          description: internal server error
+          description: Internal Server Error
           schema:
             $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.Error'
       summary: Search User By ID
-      tags:
-      - users
-    put:
-      consumes:
-      - application/json
-      description: Update Data User By ID With The Given Input Data
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Create user object
-        in: body
-        name: Input
-        required: true
-        schema:
-          $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.User'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: success
-          schema:
-            type: string
-        "400":
-          description: error
-          schema:
-            $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.Error'
-        "404":
-          description: record not found
-          schema:
-            $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.Error'
-        "500":
-          description: internal server error
-          schema:
-            $ref: '#/definitions/github_com_luizweitz_go-api_internal_models.Error'
-      summary: Update User By ID
       tags:
       - users
 swagger: "2.0"
